/**
 * UI-preservation tests — AgentPanel header + active-execution control bar.
 *
 * Feature: zoc-agent-ecosystem-merge, Task 4.4 — UI-preservation snapshot tests.
 *
 * These tests pin the preserved "green" Panel_Shell chrome of `AgentPanel.tsx`:
 * the header row (Zap badge, "Zoc Agent"/"Zoc Ask" title, subtitle, status
 * pill, model selector slot, menu) and the active-execution control bar
 * (pause/resume, stop, elapsed timer, autonomy pill, model chip). They assert
 * the preserved DOM structure, CSS classes, color tokens, and spacing via a
 * structural snapshot plus explicit class-list assertions, and that the full
 * set of header controls is retained.
 *
 * The store (`@/lib/store`) and the body/sibling components are mocked so the
 * panel chrome renders in isolation and the snapshots stay stable.
 *
 * Validates: Requirements 1.1, 1.5, 1.6
 */
import { afterEach, beforeEach, describe, expect, it, vi } from "vitest";
import { cleanup, fireEvent, render } from "@testing-library/react";

import { useApp } from "@/lib/store";

// --- Mock the store: useApp(selector) -> selector(state) --------------------
vi.mock("@/lib/store", () => ({ useApp: vi.fn() }));

// --- Deterministic lucide-react icon stubs (any icon -> labelled span) ------
vi.mock("lucide-react", () => {
  const icon = (name: string) => {
    const Icon = (props: { className?: string }) => (
      <span data-icon={name} className={props.className} />
    );
    Icon.displayName = name;
    return Icon;
  };
  return {
    Zap: icon("Zap"),
    Pause: icon("Pause"),
    Play: icon("Play"),
    Square: icon("Square"),
    FilePenLine: icon("FilePenLine"),
  };
});

// --- Mock sibling/body components so only the chrome is under test ----------
vi.mock("./ModelPicker", () => ({
  ModelPicker: () => <div data-testid="model-picker-stub" />,
}));
vi.mock("./AgentMenu", () => ({
  AgentMenu: () => <div data-testid="agent-menu-stub" />,
}));
vi.mock("./ContextBar", () => ({
  ContextBar: () => <div data-testid="context-bar-stub" />,
}));
vi.mock("./ContextLimitDialog", () => ({
  ContextLimitDialog: () => null,
}));
vi.mock("./RunRegion", () => ({
  RunRegion: () => <div data-testid="run-region-stub" />,
  default: () => <div data-testid="run-region-stub" />,
}));
vi.mock("./Composer", () => ({
  Composer: () => <div data-testid="composer-stub" />,
}));

// Imported after the mocks above are registered.
import { AgentPanel } from "./AgentPanel";

type AppState = Record<string, unknown>;

const mockUseApp = useApp as unknown as ReturnType<typeof vi.fn>;

function applyState(state: AppState) {
  mockUseApp.mockImplementation((selector: (s: AppState) => unknown) =>
    selector(state),
  );
}

/** Full default state covering every field AgentPanel selects. */
function baseState(overrides: Partial<AppState> = {}): AppState {
  return {
    contextStatus: null,
    streaming: false,
    agentMode: "agent",
    activeRunMode: null,
    reviewRunning: false,
    testGenRunning: false,
    testRunRunning: false,
    runBudget: null,
    cancelStream: vi.fn(),
    selectedModel: { model: "openai/gpt-4o-mini" },
    autonomy: "Medium",
    agentPaused: false,
    pauseAgent: vi.fn(),
    resumeAgent: vi.fn(),
    workspaceRoot: "/ws",
    openProjectInstructions: vi.fn(),
    ...overrides,
  };
}

/** The preserved header region (grid row 1). */
function header(container: HTMLElement): HTMLElement {
  const el = container.querySelector<HTMLElement>(".row-start-1");
  if (!el) throw new Error("header (.row-start-1) not found");
  return el;
}

afterEach(() => {
  cleanup();
  vi.clearAllMocks();
});

describe("AgentPanel preservation — header chrome (idle)", () => {
  beforeEach(() => {
    applyState(baseState({ agentMode: "agent", streaming: false }));
  });

  it("preserves the header DOM structure and class-list (snapshot)", () => {
    const { container } = render(<AgentPanel />);
    expect(header(container)).toMatchSnapshot();
  });

  it("preserves the four-row grid layout and background token", () => {
    const { container } = render(<AgentPanel />);
    const root = container.firstElementChild as HTMLElement;
    expect(root.className).toContain(
      "grid-rows-[auto_auto_minmax(0,1fr)_auto]",
    );
    expect(root.className).toContain("grid-cols-1");
    expect(root.className).toContain("bg-[#0C0C10]");
    // The four grid rows are preserved in order.
    expect(container.querySelector(".row-start-1")).toBeInTheDocument();
    expect(container.querySelector(".row-start-2")).toBeInTheDocument();
    expect(container.querySelector(".row-start-3")).toBeInTheDocument();
    expect(container.querySelector(".row-start-4")).toBeInTheDocument();
  });

  it("preserves header border/background tokens and spacing", () => {
    const { container } = render(<AgentPanel />);
    const head = header(container);
    expect(head.className).toContain("border-b");
    expect(head.className).toContain("border-[#1A1A1F]");
    expect(head.className).toContain("bg-[#0C0C10]");
    const topBar = head.querySelector(".min-h-\\[48px\\]") as HTMLElement;
    expect(topBar).toBeInTheDocument();
    expect(topBar.className).toContain("px-3.5");
    expect(topBar.className).toContain("py-2");
    expect(topBar.className).toContain("gap-2");
  });

  it("preserves the purple Zap badge with its color tokens", () => {
    const { container } = render(<AgentPanel />);
    const icon = container.querySelector('[data-icon="Zap"]') as HTMLElement;
    expect(icon).toBeInTheDocument();
    expect(icon.className).toContain("text-[#9B6AF1]");
    const badge = icon.parentElement as HTMLElement;
    expect(badge.className).toContain("from-[#3B1F7C]");
    expect(badge.className).toContain("to-[#1A0E3A]");
    expect(badge.className).toContain("border-[#7C3AED]/30");
  });

  it("renders the 'Zoc Agent' title with the purple accent word", () => {
    const { container } = render(<AgentPanel />);
    const head = header(container);
    expect(head.textContent).toContain("Zoc");
    expect(head.textContent).toContain("Agent");
    const accentWord = Array.from(head.querySelectorAll("span")).find(
      (span) =>
        span.textContent?.trim() === "Agent" &&
        span.className.includes("text-[#9B6AF1]"),
    );
    expect(accentWord).toBeTruthy();
  });

  it("retains the idle status pill and the header controls (model selector + menu)", () => {
    const { getByText, getByTestId } = render(<AgentPanel />);
    expect(getByText("idle")).toBeInTheDocument();
    expect(getByTestId("model-picker-stub")).toBeInTheDocument();
    expect(getByTestId("agent-menu-stub")).toBeInTheDocument();
  });

  it("opens project instructions from the header", () => {
    const openProjectInstructions = vi.fn();
    applyState(baseState({ openProjectInstructions }));

    const { getByRole } = render(<AgentPanel />);
    fireEvent.click(getByRole("button", { name: "Edit instructions" }));

    expect(openProjectInstructions).toHaveBeenCalledOnce();
  });

  it("shows the 'Ask' header word and read-only subtitle in Ask mode", () => {
    applyState(baseState({ agentMode: "ask", streaming: false }));
    const { container } = render(<AgentPanel />);
    const head = header(container);
    expect(head.textContent).toContain("Ask");
    expect(head.textContent).toContain("Read-only answers");
  });
});

describe("AgentPanel preservation — active-execution control bar (running)", () => {
  beforeEach(() => {
    applyState(
      baseState({
        streaming: true,
        agentPaused: false,
        agentMode: "agent",
        autonomy: "Medium",
        selectedModel: { model: "anthropic/claude-3-5-sonnet" },
      }),
    );
  });

  it("preserves the control-bar DOM structure and class-list (snapshot)", () => {
    const { container } = render(<AgentPanel />);
    expect(header(container)).toMatchSnapshot();
  });

  it("retains pause, stop, timer, autonomy pill and model chip controls", () => {
    const { getByTitle, getByLabelText, container } = render(<AgentPanel />);
    expect(getByTitle("Pause run")).toBeInTheDocument();
    const stop = getByTitle("Stop run") as HTMLElement;
    expect(stop.className).toContain("bg-[#f87171]/10");
    expect(stop.className).toContain("border-[#f87171]/30");
    expect(stop.className).toContain("text-[#f87171]");
    expect(container.querySelector(".font-mono")).toBeInTheDocument();
    expect(getByLabelText("Autonomy level: Medium")).toBeInTheDocument();
    expect(getByTitle("anthropic/claude-3-5-sonnet")).toBeInTheDocument();
  });

  it("shows the running status pill with a pulsing dot", () => {
    const { getByText, container } = render(<AgentPanel />);
    expect(getByText("Building…")).toBeInTheDocument();
    expect(container.querySelector(".animate-ping")).toBeInTheDocument();
  });

  it("shows Ask wording while an auto-routed Ask run is active", () => {
    applyState(
      baseState({
        streaming: true,
        agentPaused: false,
        agentMode: "agent",
        activeRunMode: "ask",
      }),
    );
    const { getByText, getAllByText } = render(<AgentPanel />);
    expect(getByText("Ask")).toBeInTheDocument();
    expect(getAllByText("Answering…").length).toBeGreaterThan(0);
  });

  it("renders the resume control when the run is paused", () => {
    applyState(
      baseState({ streaming: true, agentPaused: true, agentMode: "agent" }),
    );
    const { getByText, getByTitle } = render(<AgentPanel />);
    expect(getByTitle("Resume run")).toBeInTheDocument();
    expect(getByText("Paused")).toBeInTheDocument();
  });

  it("shows the token budget meter below the active header", () => {
    applyState(
      baseState({
        streaming: true,
        runBudget: {
          type: "budget",
          seq: 1,
          runId: "run-1",
          ts: "2026-06-21T00:00:00Z",
          tokensUsed: 2000,
          tokenLimit: 4000,
          iterations: 2,
          recoveries: 0,
        },
      }),
    );
    const { getByTestId } = render(<AgentPanel />);
    expect(getByTestId("token-budget-meter")).toHaveAttribute(
      "title",
      "2,000 / 4,000 tokens used · 2 iterations · 0 recoveries",
    );
  });
});
