// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentPanel preservation — active-execution control bar (running) > preserves the control-bar DOM structure and class-list (snapshot) 1`] = `
<div
  class="row-start-1 shrink-0 border-b border-[#1A1A1F] bg-[#0C0C10]"
>
  <div
    class="agent-panel-header-row flex min-h-[48px] items-center gap-2 px-3.5 py-2"
  >
    <div
      class="agent-panel-header-brand flex min-w-0 shrink-0 items-center gap-2.5"
    >
      <span
        class="flex h-7 w-7 shrink-0 items-center justify-center rounded-lg bg-gradient-to-br from-[#3B1F7C] to-[#1A0E3A] border border-[#7C3AED]/30 shadow-[0_0_12px_rgba(124,58,237,0.25)]"
      >
        <span
          class="h-3.5 w-3.5 text-[#9B6AF1]"
          data-icon="Zap"
        />
      </span>
      <div
        class="min-w-0"
      >
        <div
          class="whitespace-nowrap text-[13px] font-semibold text-[#FAFAFA] leading-tight"
        >
          Zoc
          <span
            class="font-semibold text-[#9B6AF1]"
          >
             Agent
          </span>
        </div>
        <div
          class="agent-panel-header-subtitle mt-0.5 max-w-[112px] truncate whitespace-nowrap text-[10px] leading-tight text-[#52525B]"
        >
          Autonomous editing
        </div>
      </div>
    </div>
    <div
      class="ml-auto flex min-w-0 items-center gap-1.5"
    >
      <button
        class="inline-flex h-6 items-center gap-1.5 rounded px-1.5 text-[10px] font-medium text-[#71717A] transition-colors hover:bg-[#17171C] hover:text-[#C8C8CE] disabled:cursor-not-allowed disabled:opacity-40"
        title="Open .zoc/instructions.md"
        type="button"
      >
        <span
          class="h-3 w-3 shrink-0"
          data-icon="FilePenLine"
        />
        <span
          class="agent-panel-instructions-label"
        >
          Edit instructions
        </span>
      </button>
      <div
        class="flex items-center gap-2 rounded-full border border-[#26262B] bg-[#15151A] px-2.5 py-1"
      >
        <span
          class="relative flex h-2 w-2 shrink-0"
        >
          <span
            class="absolute inline-flex h-full w-full animate-ping rounded-full bg-[#9B6AF1] opacity-50"
          />
          <span
            class="relative inline-flex h-2 w-2 rounded-full bg-[#9B6AF1]"
          />
        </span>
        <span
          class="text-[11px] font-medium text-[#C8C8CE]"
        >
          Building…
        </span>
        <span
          class="font-mono text-[11px] text-[#52525B]"
        >
          00:00:00
        </span>
      </div>
      <div
        data-testid="agent-menu-stub"
      />
    </div>
  </div>
  <div
    class="flex items-center gap-2 px-3.5 pb-2.5 border-t border-[#1A1A1F]/80 pt-2"
  >
    <button
      class="flex h-6 w-6 items-center justify-center rounded-md border border-[#26262B] bg-[#15151A] text-[#71717A] transition-colors hover:bg-[#1E1E23] hover:text-[#A1A1AA] disabled:pointer-events-none disabled:opacity-40"
      title="Pause run"
      type="button"
    >
      <span
        class="h-3 w-3 fill-current"
        data-icon="Pause"
      />
    </button>
    <button
      class="flex h-6 w-6 items-center justify-center rounded-md border border-[#f87171]/30 bg-[#f87171]/10 text-[#f87171] transition-colors hover:bg-[#f87171]/20 disabled:pointer-events-none disabled:opacity-40"
      title="Stop run"
      type="button"
    >
      <span
        class="h-2.5 w-2.5 fill-current"
        data-icon="Square"
      />
    </button>
    <span
      aria-label="Autonomy level: Medium"
      class="flex items-center gap-1.5 rounded-md border border-[#26262B] bg-[#15151A] px-2 py-0.5"
      title="Autonomy: Medium"
    >
      <span
        class="h-1.5 w-1.5 rounded-full bg-[#9B6AF1]"
      />
      <span
        class="text-[11px] text-[#71717A]"
      >
        Medium
      </span>
    </span>
    <span
      class="ml-auto max-w-[140px] truncate rounded-md border border-[#1A1A1F] bg-[#0F0F14] px-2 py-0.5 font-mono text-[10px] text-[#52525B]"
      title="anthropic/claude-3-5-sonnet"
    >
      claude-3-5-sonnet
    </span>
  </div>
</div>
`;

exports[`AgentPanel preservation — header chrome (idle) > preserves the header DOM structure and class-list (snapshot) 1`] = `
<div
  class="row-start-1 shrink-0 border-b border-[#1A1A1F] bg-[#0C0C10]"
>
  <div
    class="agent-panel-header-row flex min-h-[48px] items-center gap-2 px-3.5 py-2"
  >
    <div
      class="agent-panel-header-brand flex min-w-0 shrink-0 items-center gap-2.5"
    >
      <span
        class="flex h-7 w-7 shrink-0 items-center justify-center rounded-lg bg-gradient-to-br from-[#3B1F7C] to-[#1A0E3A] border border-[#7C3AED]/30 shadow-[0_0_12px_rgba(124,58,237,0.25)]"
      >
        <span
          class="h-3.5 w-3.5 text-[#9B6AF1]"
          data-icon="Zap"
        />
      </span>
      <div
        class="min-w-0"
      >
        <div
          class="whitespace-nowrap text-[13px] font-semibold text-[#FAFAFA] leading-tight"
        >
          Zoc
          <span
            class="font-semibold text-[#9B6AF1]"
          >
             Agent
          </span>
        </div>
        <div
          class="agent-panel-header-subtitle mt-0.5 max-w-[112px] truncate whitespace-nowrap text-[10px] leading-tight text-[#52525B]"
        >
          Autonomous editing
        </div>
      </div>
    </div>
    <div
      class="ml-auto flex min-w-0 items-center gap-1.5"
    >
      <button
        class="inline-flex h-6 items-center gap-1.5 rounded px-1.5 text-[10px] font-medium text-[#71717A] transition-colors hover:bg-[#17171C] hover:text-[#C8C8CE] disabled:cursor-not-allowed disabled:opacity-40"
        title="Open .zoc/instructions.md"
        type="button"
      >
        <span
          class="h-3 w-3 shrink-0"
          data-icon="FilePenLine"
        />
        <span
          class="agent-panel-instructions-label"
        >
          Edit instructions
        </span>
      </button>
      <span
        class="agent-panel-idle inline-flex h-5 items-center rounded-full border border-[#1E1E23] bg-[#141419] px-2 font-mono text-[10px] text-[#52525B]"
      >
        idle
      </span>
      <div
        class="agent-panel-model-picker min-w-0"
      >
        <div
          data-testid="model-picker-stub"
        />
      </div>
      <div
        data-testid="agent-menu-stub"
      />
    </div>
  </div>
</div>
`;
